--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -19,7 +19,7 @@ bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
 bind = SUPER, O, exec, hyprlock
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Escape, exec, $scrPath/logoutlaunch.sh # launch logout menu
-
+bind = Ctrl, Escape, exec, killall waybar || waybar
 # Application shortcuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
 bind = $mainMod, F, exec, $file # launch file manager
